@@ -1,18 +1,19 @@
-## Getting Started
+# JavaFX Based Login System
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+---
 
-## Folder Structure
+## 👉 Requirements
 
-The workspace contains two folders by default, where:
+- JDK - 17.0.2
+- JavaFX SDK - 17.0.2
+- fontawesomefx-8.9
+- jfoenix-17.0.2
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+## vmArgs Setup
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+```
+----module-path \"E:\\Application\\Java Material\\javafx-sdk-17.0.2\\lib\" --add-modules javafx.controls,javafx.fxml
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
+```
 
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+👉 Sample screenshots taken
